# rules_xcode_download

./: LICENSE  MODULE.bazel  README.md  defs.bzl
tests/: BUILD.bazel
tools/: bazel
